--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/4/n11701121.md#1" target="_blank">宁静：中共改编《天仙配》摧毁孝道败坏人伦</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/2/n11494526.md#1" target="_blank">英国女士秘鲁探险 偶遇大法后改变人生</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/3/n11630909.md#1" target="_blank">林辉：中共对万里长城的破坏与利用</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/3/29/n2063507.md#1" target="_blank">是自焚还是骗局？</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
