--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/9/n10131106.md#1" target="_blank">林辉：北京四中老师们健忘背后的残酷真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/6/n11167851.md#1" target="_blank">天主教新闻网：中共的群体灭绝罪行</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/26/n11140380.md#1" target="_blank">【征文】刘晓：传统文化中对修炼人的敬重</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/1/n3859798.md#1" target="_blank">乡音：这样的菜农越多越好</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
